seccion talleristas agregar galeria

--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
 		"stylelint": "^9.5.0",
 		"gulp-autoprefixer": "^5.0.0",
 		"gulp-sass": "^4.0.1"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.2.0"
 	}
 }
